event spacing fix wip

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ nav{
   margin: 5vmin;
 }
 .page{
-  width: 70%;
+  width: 90%;
 }
 .page > div {
   display: flex;
@@ -48,9 +48,15 @@ nav{
   width: 100%;
 }
 .timeblock{
+  /* border-left: 2px solid black; */
   /* font-size: 60%; */
   /* -webkit-transform: rotate(-90deg); */
   /* transform: rotate(90deg), ; */
+}
+.timeline{
+  display: flex;
+  flex-direction: row;
+  margin: 2vmin 0;
 }
 input[type='number'] {
   -moz-appearance:textfield;
